obj/Debug/MiniCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\UOP\7th Semester\Compilers II\Laboratory\MiniC\MiniC.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MiniC {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class MiniCParser : Parser {
	public const int
		FUNCTION=1, IF=2, ELSE=3, FOR=4, WHILE=5, DO=6, SWITCH=7, CASE=8, DEFAULT=9, 
		RETURN=10, BREAK=11, INTSPECIFIER=12, DOUBLESPECIFIER=13, STRINGSPECIFIER=14, 
		LP=15, RP=16, LB=17, RB=18, SEMICOLON=19, COLON=20, COMMA=21, PLUS=22, 
		MINUS=23, MULTI=24, DIV=25, ASSIGN=26, PLUSONE=27, MINUSONE=28, AND=29, 
		OR=30, NOT=31, GT=32, GTE=33, LT=34, LTE=35, EQUAL=36, NEQUAL=37, DOUBLE=38, 
		INTEGER=39, VARIABLE=40, STRING=41, COMMENT=42, WS=43;
	public const int
		RULE_compileUnit = 0, RULE_function_definition = 1, RULE_fargs = 2, RULE_statement = 3, 
		RULE_expr_statement = 4, RULE_if_statement = 5, RULE_for_statement = 6, 
		RULE_while_statement = 7, RULE_do_while_statement = 8, RULE_switch_statement = 9, 
		RULE_switch_case = 10, RULE_switch_default = 11, RULE_return_statement = 12, 
		RULE_break_statement = 13, RULE_null_statement = 14, RULE_compound_statement = 15, 
		RULE_statements = 16, RULE_expr = 17, RULE_specifier = 18, RULE_args = 19;
	public static readonly string[] ruleNames = {
		"compileUnit", "function_definition", "fargs", "statement", "expr_statement", 
		"if_statement", "for_statement", "while_statement", "do_while_statement", 
		"switch_statement", "switch_case", "switch_default", "return_statement", 
		"break_statement", "null_statement", "compound_statement", "statements", 
		"expr", "specifier", "args"
	};

	private static readonly string[] _LiteralNames = {
		null, "'function'", "'if'", "'else'", "'for'", "'while'", "'do'", "'switch'", 
		"'case'", "'default'", "'return'", "'break'", "'int'", "'double'", "'string'", 
		"'('", "')'", "'{'", "'}'", "';'", "':'", "','", "'+'", "'-'", "'*'", 
		"'/'", "'='", "'++'", "'--'", "'&&'", "'||'", "'!'", "'>'", "'>='", "'<'", 
		"'<='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FUNCTION", "IF", "ELSE", "FOR", "WHILE", "DO", "SWITCH", "CASE", 
		"DEFAULT", "RETURN", "BREAK", "INTSPECIFIER", "DOUBLESPECIFIER", "STRINGSPECIFIER", 
		"LP", "RP", "LB", "RB", "SEMICOLON", "COLON", "COMMA", "PLUS", "MINUS", 
		"MULTI", "DIV", "ASSIGN", "PLUSONE", "MINUSONE", "AND", "OR", "NOT", "GT", 
		"GTE", "LT", "LTE", "EQUAL", "NEQUAL", "DOUBLE", "INTEGER", "VARIABLE", 
		"STRING", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MiniCParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(MiniCParser.Eof, 0); }
		public Function_definitionContext[] function_definition() {
			return GetRuleContexts<Function_definitionContext>();
		}
		public Function_definitionContext function_definition(int i) {
			return GetRuleContext<Function_definitionContext>(i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 42;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case FUNCTION:
					{
					State = 40; function_definition();
					}
					break;
				case IF:
				case FOR:
				case WHILE:
				case DO:
				case SWITCH:
				case RETURN:
				case BREAK:
				case INTSPECIFIER:
				case DOUBLESPECIFIER:
				case STRINGSPECIFIER:
				case LP:
				case LB:
				case SEMICOLON:
				case PLUS:
				case MINUS:
				case NOT:
				case DOUBLE:
				case INTEGER:
				case VARIABLE:
				case STRING:
				case COMMENT:
					{
					State = 41; statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 44;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << DO) | (1L << SWITCH) | (1L << RETURN) | (1L << BREAK) | (1L << INTSPECIFIER) | (1L << DOUBLESPECIFIER) | (1L << STRINGSPECIFIER) | (1L << LP) | (1L << LB) | (1L << SEMICOLON) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << DOUBLE) | (1L << INTEGER) | (1L << VARIABLE) | (1L << STRING) | (1L << COMMENT))) != 0) );
			State = 46; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_definitionContext : ParserRuleContext {
		public Function_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_definition; } }
	 
		public Function_definitionContext() { }
		public virtual void CopyFrom(Function_definitionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FunctionDefinitionContext : Function_definitionContext {
		public ITerminalNode FUNCTION() { return GetToken(MiniCParser.FUNCTION, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public FargsContext fargs() {
			return GetRuleContext<FargsContext>(0);
		}
		public FunctionDefinitionContext(Function_definitionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterFunctionDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitFunctionDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_definitionContext function_definition() {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_function_definition);
		int _la;
		try {
			_localctx = new FunctionDefinitionContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(FUNCTION);
			State = 49; expr(0);
			State = 50; Match(LP);
			State = 52;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTSPECIFIER) | (1L << DOUBLESPECIFIER) | (1L << STRINGSPECIFIER) | (1L << LP) | (1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << DOUBLE) | (1L << INTEGER) | (1L << VARIABLE) | (1L << STRING) | (1L << COMMENT))) != 0)) {
				{
				State = 51; fargs();
				}
			}

			State = 54; Match(RP);
			State = 55; compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FargsContext : ParserRuleContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(MiniCParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(MiniCParser.COMMA, i);
		}
		public FargsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fargs; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterFargs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitFargs(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFargs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FargsContext fargs() {
		FargsContext _localctx = new FargsContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_fargs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57; expr(0);
			State = 62;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 58; Match(COMMA);
				State = 59; expr(0);
				}
				}
				State = 64;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Expr_statementContext expr_statement() {
			return GetRuleContext<Expr_statementContext>(0);
		}
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		public For_statementContext for_statement() {
			return GetRuleContext<For_statementContext>(0);
		}
		public While_statementContext while_statement() {
			return GetRuleContext<While_statementContext>(0);
		}
		public Do_while_statementContext do_while_statement() {
			return GetRuleContext<Do_while_statementContext>(0);
		}
		public Switch_statementContext switch_statement() {
			return GetRuleContext<Switch_statementContext>(0);
		}
		public Return_statementContext return_statement() {
			return GetRuleContext<Return_statementContext>(0);
		}
		public Break_statementContext break_statement() {
			return GetRuleContext<Break_statementContext>(0);
		}
		public Null_statementContext null_statement() {
			return GetRuleContext<Null_statementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 75;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INTSPECIFIER:
			case DOUBLESPECIFIER:
			case STRINGSPECIFIER:
			case LP:
			case PLUS:
			case MINUS:
			case NOT:
			case DOUBLE:
			case INTEGER:
			case VARIABLE:
			case STRING:
			case COMMENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 65; expr_statement();
				}
				break;
			case LB:
				EnterOuterAlt(_localctx, 2);
				{
				State = 66; compound_statement();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 67; if_statement();
				}
				break;
			case FOR:
				EnterOuterAlt(_localctx, 4);
				{
				State = 68; for_statement();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 69; while_statement();
				}
				break;
			case DO:
				EnterOuterAlt(_localctx, 6);
				{
				State = 70; do_while_statement();
				}
				break;
			case SWITCH:
				EnterOuterAlt(_localctx, 7);
				{
				State = 71; switch_statement();
				}
				break;
			case RETURN:
				EnterOuterAlt(_localctx, 8);
				{
				State = 72; return_statement();
				}
				break;
			case BREAK:
				EnterOuterAlt(_localctx, 9);
				{
				State = 73; break_statement();
				}
				break;
			case SEMICOLON:
				EnterOuterAlt(_localctx, 10);
				{
				State = 74; null_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Expr_statementContext : ParserRuleContext {
		public Expr_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr_statement; } }
	 
		public Expr_statementContext() { }
		public virtual void CopyFrom(Expr_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementExprContext : Expr_statementContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(MiniCParser.SEMICOLON, 0); }
		public StatementExprContext(Expr_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Expr_statementContext expr_statement() {
		Expr_statementContext _localctx = new Expr_statementContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_expr_statement);
		try {
			_localctx = new StatementExprContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; expr(0);
			State = 78; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statementContext : ParserRuleContext {
		public If_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_statement; } }
	 
		public If_statementContext() { }
		public virtual void CopyFrom(If_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementIfContext : If_statementContext {
		public ITerminalNode IF() { return GetToken(MiniCParser.IF, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(MiniCParser.ELSE, 0); }
		public StatementIfContext(If_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementIf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementIf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statementContext if_statement() {
		If_statementContext _localctx = new If_statementContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_if_statement);
		try {
			_localctx = new StatementIfContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(IF);
			State = 81; Match(LP);
			State = 82; expr(0);
			State = 83; Match(RP);
			State = 84; statement();
			State = 87;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 85; Match(ELSE);
				State = 86; statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class For_statementContext : ParserRuleContext {
		public For_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_for_statement; } }
	 
		public For_statementContext() { }
		public virtual void CopyFrom(For_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementForContext : For_statementContext {
		public ITerminalNode FOR() { return GetToken(MiniCParser.FOR, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(MiniCParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(MiniCParser.SEMICOLON, i);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public StatementForContext(For_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementFor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementFor(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementFor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public For_statementContext for_statement() {
		For_statementContext _localctx = new For_statementContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_for_statement);
		try {
			_localctx = new StatementForContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; Match(FOR);
			State = 90; Match(LP);
			State = 91; expr(0);
			State = 92; Match(SEMICOLON);
			State = 93; expr(0);
			State = 94; Match(SEMICOLON);
			State = 95; expr(0);
			State = 96; Match(RP);
			State = 97; compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_statementContext : ParserRuleContext {
		public While_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while_statement; } }
	 
		public While_statementContext() { }
		public virtual void CopyFrom(While_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementWhileContext : While_statementContext {
		public ITerminalNode WHILE() { return GetToken(MiniCParser.WHILE, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public StatementWhileContext(While_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementWhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_statementContext while_statement() {
		While_statementContext _localctx = new While_statementContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_while_statement);
		try {
			_localctx = new StatementWhileContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(WHILE);
			State = 100; Match(LP);
			State = 101; expr(0);
			State = 102; Match(RP);
			State = 103; compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Do_while_statementContext : ParserRuleContext {
		public Do_while_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_do_while_statement; } }
	 
		public Do_while_statementContext() { }
		public virtual void CopyFrom(Do_while_statementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StatementDoWhileContext : Do_while_statementContext {
		public ITerminalNode DO() { return GetToken(MiniCParser.DO, 0); }
		public Compound_statementContext compound_statement() {
			return GetRuleContext<Compound_statementContext>(0);
		}
		public ITerminalNode WHILE() { return GetToken(MiniCParser.WHILE, 0); }
		public ITerminalNode LP() { return GetToken(MiniCParser.LP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode RP() { return GetToken(MiniCParser.RP, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(MiniCParser.SEMICOLON, 0); }
		public StatementDoWhileContext(Do_while_statementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.EnterStatementDoWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMiniCListener typedListener = listener as IMiniCListener;
			if (typedListener != null) typedListener.ExitStatementDoWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniCVisitor<TResult> typedVisitor = visitor as IMiniCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementDoWhile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Do_while_statementContext do_while_statement() {
		Do_while_statementContext _localctx = new Do_while_statementContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_do_while_statement);
		try {
			_localctx = new StatementDoWhileContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(DO);
			State = 106; compound_statement();
			State = 107; Match(WHILE);
			State = 108; Match(LP);
			State = 109; expr(0);
			State = 110; Match(RP);
			State = 111; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
